AC_INIT([shim], [0.1])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([main.c])

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_GCC_TRADITIONAL
if test "$GCC" = yes; then
	CFLAGS="$CFLAGS -g -Wall"
fi

PKG_CHECK_MODULES(LIBEVENT, libevent >= 2.0.0)
AC_SUBST(LIBEVENT_CFLAGS)
AC_SUBST(LIBEVENT_LIBS)

AC_OUTPUT(Makefile)
